--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,24 +8,30 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  cloud_firestore: ^4.15.8
+  firebase_storage: ^11.6.9
   flutter:
     sdk: flutter
+  fluttertoast: ^8.2.5
+  gallery_saver: ^2.3.2
+  http: ^0.13.6
+  image_picker: ^1.0.8
+  path_provider: ^2.1.3
+  permission_handler: ^11.3.1
+  photo_view: ^0.15.0
+  stacked: ^3.4.2
+  timeago: ^3.6.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
 
   # To add assets to your package, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  #   - assets/images/profile.jpeg
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/assets-and-images/#from-packages
