--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -43,8 +43,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/images/profile.jpeg
+  # assets:
+  #   - assets/images/profile.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
