--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   gallery_saver: ^2.3.2
   http: ^0.13.6
   image_picker: ^1.0.8
+  lottie: ^3.0.0
   path_provider: ^2.1.3
   permission_handler: ^11.3.1
   photo_view: ^0.15.0
