Downgrade image_picker: ^1.0.8 To image_picker: ^0.8.9

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ migrate_working_dir/
 **/doc/api/
 .dart_tool/
 build/
-example/android/app/google-services.json
-example/lib/firebase_options.dart
-example/ios/Runner/GoogleService-Info.plist
-example/macos/Runner/GoogleService-Info.plist
+# example/android/app/google-services.json
+# example/lib/firebase_options.dart
+# example/ios/Runner/GoogleService-Info.plist
+# example/macos/Runner/GoogleService-Info.plist
