--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: firebase_realtime_chat
 description: "This Flutter package simplifies real-time chat integration using Firebase Firestore for private and community chat rooms with customizable UI options."
-version: 0.0.3
+version: 0.0.4
 homepage: https://github.com/mudassir060/firebase_realtime_chat.git
 
 environment:
@@ -8,14 +8,16 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  cloud_firestore: ^4.15.8
-  firebase_storage: ^11.6.9
+  cloud_firestore: ^5.0.1
+  connectivity_plus: ^6.0.3
+  firebase_auth: ^5.1.0
+  firebase_storage: ^12.0.1
   flutter:
     sdk: flutter
   fluttertoast: ^8.2.5
   gallery_saver: ^2.3.2
   http: ^0.13.6
-  image_picker: ^0.8.9
+  image_picker: ^1.1.2
   lottie: ^3.0.0
   path_provider: ^2.1.3
   permission_handler: ^11.3.1
@@ -25,7 +27,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
 
